# crabby

./: .gitignore  .zshrc  Cargo.toml  Makefile  build  build.rs  coef.csv  err  findcmd  inverttree  lcov.info  lddcmd  ls_cmd  output.csv  script.py  stderr  stdout  test  tree
src/: base_model.rs  lib.rs  main.rs  prelude.rs
src/core/: mod.rs  patty.rs
src/core/errors/: fitting_error.rs  linear_algebra_error.rs  model_error.rs
src/core/matrix_ops/: blas_transpose_flag.rs  least_squares_solver.rs  matrix_inverter.rs  matrix_multiplier.rs  mod.rs
src/core/structs/: mod.rs  real_matrix.rs
src/core/traits/: fitter.rs  has_length_method.rs  loss_function.rs  mod.rs  model.rs  predictor.rs  scorer.rs
src/errors/: fitting_error.rs  linear_algebra_error.rs  mod.rs  model_error.rs
src/fortran/: invert_matrix.rs  mod.rs
src/lapack/: blas_transpose_flag.rs  least_squares_solver.rs  matrix_inverter.rs  matrix_multiplication.rs  matrix_multiplier.rs  mod.rs  qr_factorization.rs
src/lapack_/: least_squares_solver.rs  matrix_inverter.rs  mod.rs
src/matrix_ops/: least_squares_solver.rs  matrix_inverter.rs  matrix_multiplier.rs  mod.rs
src/plugins/: mod.rs
src/plugins/fitters/: mod.rs
src/plugins/fitters/least_squares_fitter/: mod.rs  (+1 more)
src/plugins/loss/: l2_loss_function.rs  mod.rs
src/plugins/predictors/: linear_predictor.rs  mod.rs
src/plugins/scorers/: mod.rs  mse_scorer.rs
src/structs/: mod.rs  model_data.rs  real_matrix.rs
src/traits/: fitter.rs  has_length_method.rs  loss_function.rs  mod.rs  model.rs  predictor.rs  scorer.rs
