[package]
build  ="build.rs"
edition="2021"
name   ="crabby"
version="0.1.0"

[dependencies]
blas          ="0.22.0"
derive_builder="0.20.2"
lapack        ="0.19.0"
ndarray       ={ version="0.16.1", features=["blas"] }
rayon         ="1.10.0"

# Make openblas-src optional
openblas-src={ version="0.10.9", optional=true }

[features]
# Define a feature to enable OpenBLAS only in release builds
openblas=["openblas-src"]

[profile.release]
# Enable the openblas feature for release builds
codegen-units  =1
debug          =false
features       =["openblas"]
incremental    =false
lto            =true
opt-level      =3
overflow-checks=false
panic          ='abort'
